--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -35,10 +35,14 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
     def usersCount = Math.round((params.users.toInteger() / params.loadGeneratorsCount.toInteger()).floatValue())
     final files = findFiles(glob: 'workflows-scripts/**/*.jmx')
     for (def i=0; i<files.length; i++) {
-        echo "${files[i].name}"
-        echo "${files[i].path.minus(files[i].name)}"
-        echo "${files[i].path}"
-        //zip zipFile: '${files[i].name}.zip', archive: true, dir: '${files[i].directory}'
+        //echo "${files[i].name}"
+        //echo "${files[i].path.minus(files[i].name)}"
+        //echo "${files[i].path}"
+        def test_name = ${files[i].name.minus('.jmx')}
+        def parent_folder = ${files[i].path.minus(files[i].name)}
+        echo "${test_name}"
+        echo "${parent_folder}"
+        zip zipFile: '${test_name}.zip', archive: true, dir: '${parent_folder}'
         //archiveArtifacts artifacts: '${files[i].directory}/*'
         //httpRequest httpMode: 'POST', requestBody: mdBody, url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${files[i].name}.zip"
 
