--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -38,11 +38,11 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         //echo "${files[i].name}"
         //echo "${files[i].path.minus(files[i].name)}"
         //echo "${files[i].path}"
-        def test_name = ${files[i].name.minus('.jmx')}
-        def parent_folder = ${files[i].path.minus(files[i].name)}
-        echo "${test_name}"
-        echo "${parent_folder}"
-        zip zipFile: '${test_name}.zip', archive: true, dir: '${parent_folder}'
+        //def test_name = ${files[i].name.minus('.jmx')}
+        //def parent_folder = ${files[i].path.minus(files[i].name)}
+        echo "${files[i].name.minus('.jmx')}"
+        echo "${files[i].path.minus(files[i].name)}"
+        //zip zipFile: '${test_name}.zip', archive: true, dir: '${parent_folder}'
         //archiveArtifacts artifacts: '${files[i].directory}/*'
         //httpRequest httpMode: 'POST', requestBody: mdBody, url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${files[i].name}.zip"
 
