--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -42,7 +42,7 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         //def parent_folder = ${files[i].path.minus(files[i].name)}
         echo "${files[i].name.minus('.jmx')}"
         echo "${files[i].path.minus(files[i].name)}"
-        zip zipFile: '${files[i].name.minus('.jmx')}.zip', archive: true, dir: '${files[i].path.minus(files[i].name)}'
+        zip zipFile: "${files[i].name.minus('.jmx')}.zip", archive: true, dir: "${files[i].path.minus(files[i].name)}"
         //archiveArtifacts artifacts: '${files[i].directory}/*'
         //httpRequest httpMode: 'POST', uploadFile: "<filePath>", url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${files[i].name}.zip"
 
