--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -38,12 +38,14 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         //echo "${files[i].name}"
         //echo "${files[i].path.minus(files[i].name)}"
         //echo "${files[i].path}"
-        def test_name = "${files[i].name.minus('.jmx')}"
-        def parent_folder = "${files[i].path.minus(files[i].name)}"
-        echo ${test_name}
-        echo ${parent_folder}
-        zip zipFile: "${test_name}.zip", archive: true, dir: "${files[i].path.minus(files[i].name)}"
-        //httpRequest httpMode: 'POST', uploadFile: "<filePath>", url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${files[i].name}.zip"
+        def test_name = ${files[i].name.minus('.jmx')}
+        def path_and_name = ${files[i].path.minus('.jmx')}
+        def parent_folder = ${files[i].path.minus(files[i].name)}
+        echo test_name
+        echo path_and_name
+        echo parent_folder
+        zip zipFile: "${test_name}.zip", archive: true, dir: "${parent_folder}"
+        //httpRequest httpMode: 'POST', uploadFile: "${path_and_name}.zip", url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${files[i].name}.zip"
 
         /*sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
             -v ${WORKSPACE}:/mnt/jmeter \
