--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -38,7 +38,7 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         def test_Name = "${files[i].name.minus('.jmx')}"
         def pathAndName = "${files[i].path.minus('.jmx')}"
         def parentFolder = "${files[i].path.minus(files[i].name)}"
-        zip zipFile: "${test_Name}.zip", archive: true, dir: "${parentFolder}"
+        zip zipFile: "${pathAndName}.zip", archive: false, dir: "${parentFolder}"
         httpRequest httpMode: 'POST', uploadFile: "${pathAndName}.zip", customHeaders: [[name: 'Authorization', value: 'bearer ${carrierToken}']], url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${test_Name}.zip"
 
         /*sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
