--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -39,7 +39,13 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         def pathAndName = "${files[i].path.minus('.jmx')}"
         def parentFolder = "${files[i].path.minus(files[i].name)}"
         zip zipFile: "${pathAndName}.zip", archive: false, dir: "${parentFolder}"
-        httpRequest httpMode: 'POST', uploadFile: "${pathAndName}.zip", customHeaders: [[name: 'Authorization', value: 'bearer ${carrierToken}']], url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${test_Name}.zip"
+        withCredentials([string(credentialsId: 'perf_carrier_io_token_u51', variable: 'carrierToken')]) {
+          //httpRequest httpMode: 'POST', uploadFile: "${pathAndName}.zip", customHeaders: [[name: 'Authorization', value: 'bearer ${carrierToken}']], url: "http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${test_Name}.zip"
+          sh "curl -w '\n' -X POST -D - http://${reportingInstanceUrl}/api/v1/artifacts/${projectId}/${bucket}/${test_Name}.zip \
+                -H 'Authorization: bearer ${carrierToken}'
+                -F "file=@${pathAndName}.zip"
+        }
+         
 
         /*sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
             -v ${WORKSPACE}:/mnt/jmeter \
