--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -48,15 +48,6 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
                 -H 'Authorization: bearer ${carrierToken}' \
                 -F 'file=@${artifact}'"
 
-            /*sh "docker pull getcarrier/perfmeter:latest && docker run -t --rm -u 0:0 \
-                -v ${WORKSPACE}:/mnt/jmeter \
-                -e build_id=build_${JOB_NAME}_${BUILD_ID} \
-                -e GALLOPER_WEB_HOOK=http://${reportingInstanceUrl}/task/${galloperPostProccessingTaskId} \
-                -e JVM_ARGS='-Xmx${lgMemory}g' \
-                -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
-                getcarrier/perfmeter:latest \
-                    -n -t /mnt/jmeter/${files[i].path} -q /mnt/jmeter/carrier-io/parameters.txt" */
-        
             withCredentials([string(credentialsId: 'perf_redis_password_u51', variable: 'redisPassword')]) {
                 sh "docker pull getcarrier/control_tower:latest && docker run -t --rm \
                     -e REDIS_HOST=${reportingInstanceUrl} \
@@ -86,7 +77,7 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
                         -r 1 -t perfmeter -q ${loadGeneratorsCount} -n performance_test_job"
             }
         }
-        break; // remove to run all tests
+        //break; // remove to run all tests
     }
 }
 
